# net_plant_spread

./: README.md  license.md  pyproject.toml
configs/: README.md  best_ma_monthly.yaml  best_ma_season.yaml  best_ma_yearly.yaml  best_raw_month.yaml  best_raw_season.yaml  best_raw_year.yaml
configs/manuscript_configs/: README.md  lin_M_D.yaml  lin_S_D.yaml  lin_Y_D.yaml  log_M_D.yaml  log_S_D.yaml  log_Y_D.yaml  valpha_s.yaml  vd_s.yaml  vsm_m.yaml
notebook/: README.md  create_ma.ipynb  data_calib.ipynb  fig_D_L.ipynb  fig_NZ.ipynb  fig_best_config.ipynb  fig_dist.ipynb  fig_geodist.ipynb  fig_graph_configs.ipynb  find_eps.ipynb  inc_comp.ipynb  net_stats.ipynb
notebook/.ipynb_checkpoints/: fig_best_config-checkpoint.ipynb
notebook/manuscript_notebooks/: README.md  fig_D_L_C.ipynb  fig_SM_eps.ipynb  fig_SM_post.ipynb  fig_best_config.ipynb  fig_ccdf.ipynb  fig_distance.ipynb  fig_inc_comp.ipynb  net_stats.ipynb
notebook/scripts/: analysis.py  clean_df.py  cleaners.py  fig_one_helpers.py  find_net_stats.py  gen_heatmap.py  graph_helpers.py  graph_save_run.py  graph_temp_helpers.py  net_stats.py  plots.py  spatial_helpers.py  test_clean.py  test_data.py  (+2 more)
params/: README.md  pub_clean_prop_dat.csv  yearly_clean_agg.csv  yearly_clean_raw.csv
results/: best_movingaverage_month.csv  best_movingaverage_season.csv  best_movingaverage_year.csv  best_rawdata_monthly.csv  best_rawdata_season.csv  best_rawdata_year.csv
src/: E_runner.py  find_seeds.py  gen_heatmap.py  graph_helpers.py  helpers.py  mod_si.py  plots.py  spatial_helpers.py  spec_param_run.py  vary_sm.py
(+34 files in other folders)
